# crypto

./: .gitignore  Cargo.toml  README.md
.github/: .devcontainer.json
.github/chatmodes/: config.chatmode.md
.github/workflows/: build-wasm.yml  publish-wasm.yml  rust-test.yml
bbs/: Cargo.toml
bbs/benches/: bbs_bench.rs
bbs/script/: hash_test.rs  tools.rs
bbs/src/: bbs.rs  extend.rs  extend_structs.rs  lib.rs  modified_serde.rs  pok.rs  pub_use.rs  structs.rs
bbs/src/bbs_bn254/: blind.rs  keygen.rs  mod.rs  signer.rs  structs.rs  user.rs  utils.rs  verify.rs
bbs/tests/: bbs_base_test.rs  bbs_extended_test.rs  hash_test.rs  pok_test.rs  test_no_blind.rs  test_sign.rs  test_utils.rs  test_with_blind.rs
bbs_plus/: Cargo.toml
bbs_plus/benchmark/: sign_pairing.rs
bbs_plus/src/bbs_bn254/: blind.rs  mod.rs  signer.rs  utils.rs
bbs_plus/tests/: test_no_blind.rs  test_utils.rs  test_with_blind.rs
bbs_plus_wasm/: Cargo.toml
bbs_plus_wasm/src/: lib.rs  utils.rs
bbs_wasm/: Cargo.toml  READMD.md
bbs_wasm/html/: bench.html  generate_solidity_tests.html  test.html
bbs_wasm/src/: lib.rs  utils.rs
signer/: Cargo.toml
signer/src/bbs_bn254/: structs.rs
