[package]
name = "bbs_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["core", "js"] }
rand = "0.8"

bbs = { path = "../bbs_plus" }
ark-bn254 = "0.5.0"
serde_json = "1.0.149"
