[package]
name = "bbs_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
ark-serialize = "0.5.0"

bbs = { path = "../bbs" }
ark-bn254 = "0.5.0"
ark-std = "0.5.0"
hex = "0.4.3"
serde-wasm-bindgen = "0.6.5"
